# PIPD

./: CMakeLists.txt  projetoDados.cpp
data/videos/: videodados.wmv
